fix layers z-index combined with css transform
DOM objects with css 3d transform are rendered on separate "layers",
move message layer to top

--- a/tyrano/tyrano.css
+++ b/tyrano/tyrano.css
@@ -182,6 +182,12 @@ src: url("./data/others/TanukiMagic.eot");
     -khtml-user-select: none;
 }
 
+.tyrano_base * {
+  /* transform and z-index conflict fix */
+  -webkit-transform: translate3d(0px,0px,0px);
+  transform: translate3d(0px,0px,0px);
+}
+
 /* button 
 ---------------------------------------------- */
 .button {
